// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterBadge render do not hide value snapshot 1`] = `
<div>
  <span
    className="badge badge-info"
  >
    <span
      data-testid="display-name"
    >
      a common name
    </span>
    <span
      data-testid="filter-value"
    >
      : a common value
    </span>
    <Button
      aria-label="close"
      className="btn-info"
      onClick={
        {
          "handleClose": [
            "some",
            "filters",
          ],
        }
      }
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </Button>
  </span>
  <br />
</div>
`;

exports[`FilterBadge render hide Value snapshot 1`] = `
<div>
  <span
    className="badge badge-info"
  >
    <span
      data-testid="display-name"
    >
      a common name
    </span>
    <span
      data-testid="filter-value"
    />
    <Button
      aria-label="close"
      className="btn-info"
      onClick={
        {
          "handleClose": [
            "some",
            "filters",
          ],
        }
      }
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </Button>
  </span>
  <br />
</div>
`;
